--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "php": "^7.1.3",
         "laravel/passport": "^5.0 || ^6.0 || ^7.0",
         "laravel/socialite": "^4.0",
-        "schedula/league-oauth2-social" : "^1.0",
-        "illuminate/support": "~5.7 || ~6.0"
+        "schedula/league-oauth2-social" : "^1.0"
     },
     "autoload": {
         "psr-4": {
